# go1_mj_description

./: .gitignore  CMakeLists.txt  MUJOCO_LOG.TXT  README.md
mc_mujoco/: go1.in.yaml
meshes/convex/: trunk.stl  ultraSound.stl
meshes/visual/: depthCamera.stl
xml/: go1.xml
